--- a/ETL_postgres/describe.ipynb
+++ b/ETL_postgres/describe.ipynb
@@ -468,8 +468,8 @@
     }
    ],
    "source": [
-    "df1 = pd.read_json(\"data/log_data/2018/11/2018-11-01-events.json\",lines= True)\n",
-    "df1"
+    "dfLog = pd.read_json(\"data/log_data/2018/11/2018-11-01-events.json\",lines= True)\n",
+    "dfLog"
    ]
   },
   {
@@ -545,8 +545,8 @@
     }
    ],
    "source": [
-    "df2 = pd.read_json(\"data/song_data/A/A/A/TRAAAAW128F429D538.json\",lines= True)\n",
-    "df2"
+    "dfSong = pd.read_json(\"data/song_data/A/A/A/TRAAAAW128F429D538.json\",lines= True)\n",
+    "dfSong"
    ]
   },
   {
