--- a/ETL_postgres/describe.ipynb
+++ b/ETL_postgres/describe.ipynb
@@ -584,7 +584,7 @@
     }
    ],
    "source": [
-    "df1.dtypes"
+    "dfLog.dtypes"
    ]
   },
   {
@@ -614,7 +614,7 @@
     }
    ],
    "source": [
-    "df2.dtypes"
+    "dfSong.dtypes"
    ]
   },
   {
